Extra alert total trips

--- a/w2/d2/Esercizio/FE-U2-S2-L2-Esercizio.html
+++ b/w2/d2/Esercizio/FE-U2-S2-L2-Esercizio.html
@@ -79,15 +79,15 @@ Piccola immagine tonda a sinistra con bordo 2px azzurro, nome utente e recension
 
 EXTRAS
 
-12) Crea un bottone vicino ad ogni sezione per collassarla e riaprirla se premuto.
+12) Crea un bottone vicino ad ogni sezione per collassarla e riaprirla se premuto. DONE
 
-13) Crea la possibilità di contare il numero di "viaggi" presenti sulla pagina e visualizzare il risultato in un alert.
+13) Crea la possibilità di contare il numero di "viaggi" presenti sulla pagina e visualizzare il risultato in un alert. DONE
 
-14) Crea un modale con un campo email e un messaggio.
+14) Crea un modale con un campo email e un messaggio. DONE
 
-15) Quando l'utente cliccherà su "Contattaci", il modale dovrà essere visualizzato.
+15) Quando l'utente cliccherà su "Contattaci", il modale dovrà essere visualizzato. DONE
 
-16) Crea una funzione che aggiunga un badge con la scritta "HOT" su ognuna delle offerte "Welcome Summer" posizionato in alto a destra.
+16) Crea una funzione che aggiunga un badge con la scritta "HOT" su ognuna delle offerte "Welcome Summer" posizionato in alto a destra. DONE
 
 17) Crea una funzione che rimuova tutte le "card" dalla pagina
 
