--- a/w2/d2/Esercizio/index.html
+++ b/w2/d2/Esercizio/index.html
@@ -84,7 +84,7 @@
 
                 <div id="saldi-collapse" class="collapse show">
                     <div class="row row-cols-sm-2 row-cols-md-3 row-cols-lg-4 justify-content-center gy-3">
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-primary border-1 rounded-4 overflow-hidden">
                                 <img src="https://images.pexels.com/photos/1320686/pexels-photo-1320686.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-scale" alt="...">
@@ -97,7 +97,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-primary border-1 rounded-4 overflow-hidden">
                                 <img src="https://images.pexels.com/photos/3601425/pexels-photo-3601425.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
@@ -110,7 +110,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-primary border-1 rounded-4 overflow-hidden">
                                 <img src="https://images.pexels.com/photos/5044923/pexels-photo-5044923.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
@@ -123,7 +123,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-primary border-1 rounded-4 overflow-hidden">
                                 <img src="https://images.pexels.com/photos/5992583/pexels-photo-5992583.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
@@ -151,7 +151,7 @@
 
                 <div id="welcome-collapse" class="collapse show">
                     <div class="row row-cols-sm-2 row-cols-lg-3 row-cols-xl-6 justify-content-center gy-3">
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-0 rounded-2 shadow-lg summer">
                                 <img src="https://images.pexels.com/photos/1320686/pexels-photo-1320686.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-scale" alt="...">
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-0 rounded shadow-lg summer">
                                 <img src="https://images.pexels.com/photos/3601425/pexels-photo-3601425.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
@@ -177,7 +177,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-0 rounded shadow-lg summer">
                                 <img src="https://images.pexels.com/photos/5044923/pexels-photo-5044923.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
@@ -190,7 +190,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-0 rounded shadow-lg summer">
                                 <img src="https://images.pexels.com/photos/5992583/pexels-photo-5992583.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
@@ -203,7 +203,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card  border border-0 rounded shadow-lg summer">
                                 <img src="https://images.pexels.com/photos/5992583/pexels-photo-5992583.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
@@ -216,7 +216,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col trip">
                             <div class="card border border-0 rounded shadow-lg summer">
                                 <img src="https://images.pexels.com/photos/5992583/pexels-photo-5992583.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     class="card-img-top object-fit-contain" alt="...">
@@ -245,7 +245,7 @@
                 <div id="offerta-collapse" class="collapse show">
                     <div class="container m-0 d-none d-md-block">
                         <div class="row">
-                            <div class="col-8">
+                            <div class="col-8 trip">
                                 <img src="https://images.pexels.com/photos/3404361/pexels-photo-3404361.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                     alt="Ireland" class="img-fluid border rounded-5 shadow-lg">
                             </div>
@@ -271,22 +271,22 @@
 
                 <div id="lastminute-collapse" class="collapse show">
                     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-6 gy-3">
-                        <div class="col"><img
+                        <div class="col trip"><img
                                 src="https://images.pexels.com/photos/4125993/pexels-photo-4125993.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="random_travels" class="img-fluid rounded-5"></div>
-                        <div class="col"><img
+                        <div class="col trip"><img
                                 src="https://images.pexels.com/photos/4125993/pexels-photo-4125993.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="random_travels" class="img-fluid rounded-5"></div>
-                        <div class="col"><img
+                        <div class="col trip"><img
                                 src="https://images.pexels.com/photos/4125993/pexels-photo-4125993.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="random_travels" class="img-fluid rounded-5"></div>
-                        <div class="col"><img
+                        <div class="col trip"><img
                                 src="https://images.pexels.com/photos/4125993/pexels-photo-4125993.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="random_travels" class="img-fluid rounded-5"></div>
-                        <div class="col"><img
+                        <div class="col trip"><img
                                 src="https://images.pexels.com/photos/4125993/pexels-photo-4125993.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="random_travels" class="img-fluid rounded-5"></div>
-                        <div class="col"><img
+                        <div class="col trip"><img
                                 src="https://images.pexels.com/photos/4125993/pexels-photo-4125993.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="random_travels" class="img-fluid rounded-5"></div>
                     </div>
@@ -384,6 +384,8 @@
         crossorigin="anonymous"></script>
 
     <script>
+
+        //RED HOT PILL
         let hotDeals = document.querySelectorAll(".summer")
         let summerDeals = Array.from(hotDeals)
 
@@ -410,6 +412,10 @@
         summerDeal()
         console.log(summerDeal());
 
+
+        //TRIP COUNT
+        let trips = document.querySelectorAll(".trip")
+        window.alert(`${trips.length} trips`)
 
 
 
