Finished extras - kinda

--- a/w2/d2/Esercizio/FE-U2-S2-L2-Esercizio.html
+++ b/w2/d2/Esercizio/FE-U2-S2-L2-Esercizio.html
@@ -89,7 +89,7 @@ EXTRAS
 
 16) Crea una funzione che aggiunga un badge con la scritta "HOT" su ognuna delle offerte "Welcome Summer" posizionato in alto a destra. DONE
 
-17) Crea una funzione che rimuova tutte le "card" dalla pagina
+17) Crea una funzione che rimuova tutte le "card" dalla pagina. DONE (KINDA)
 
 -->
 </head>
