--- a/w2/d2/Esercizio/index.html
+++ b/w2/d2/Esercizio/index.html
@@ -7,6 +7,7 @@
     <title>The Oasis - Travel agency</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -48,14 +49,14 @@
         </div>
     </nav>
 
-    <div class="container-fluid px-5">
+    <div class="container-fluid px-1 px-md-5">
 
         <div class="card border border-0 rounded bg-body-tertiary text-center d-none d-md-block">
             <img src=" Assets/img/Logo-hero.png" class="card-img-top" alt="hero-logo">
             <div class="card-body">
-                <h5 class="card-title fst-italic">Vivi i tuoi sogni ad occhi aperti.</h5>
+                <h5 class="card-title fw-light fst-italic">Vivi i tuoi sogni ad occhi aperti.</h5>
                 <p class="card-text">
-                    <hr>
+                    <hr class="mx-5">
                 </p>
                 <a href="#" class="btn btn-primary">Parti ora</a>
             </div>
@@ -65,6 +66,7 @@
             <div class="card-body">
                 <h5 class="card-title">The Oasis - Travel agency</h5>
                 <p class="card-text">Vivi i tuoi sogni ad occhi aperti.</p>
+                <hr class="mx-5">
                 <a href="#" class="btn btn-primary">Parti ora</a>
             </div>
         </div>
@@ -304,7 +306,7 @@
 
                 <div id="recensioni-collapse" class="collapse show">
                     <div class="row my-3 d-flex justify-content-center">
-                        <div class="col-1 text-center"><img
+                        <div class="col-2 col-md-1 text-center"><img
                                 src="https://images.pexels.com/photos/1520760/pexels-photo-1520760.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="" class="img-fluid rounded-circle border border-info border-2"></div>
                         <div class="col align-bottom">
@@ -315,7 +317,7 @@
                         </div>
                     </div>
                     <div class="row my-3 d-flex justify-content-center">
-                        <div class="col-1 text-center"><img
+                        <div class="col-2 col-md-1 text-center"><img
                                 src="https://images.pexels.com/photos/10311994/pexels-photo-10311994.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="" class="img-fluid rounded-circle border border-info border-2"></div>
                         <div class="col align-bottom">
@@ -326,7 +328,7 @@
                         </div>
                     </div>
                     <div class="row my-3 d-flex justify-content-center">
-                        <div class="col-1 text-center"><img
+                        <div class="col-2 col-md-1 text-center"><img
                                 src="https://images.pexels.com/photos/5794945/pexels-photo-5794945.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                                 alt="" class="img-fluid rounded-circle border border-info border-2"></div>
                         <div class="col align-bottom">
@@ -426,7 +428,7 @@
             });
         }
 
-        hideCards()
+        // hideCards()
 
     </script>
 </body>
