--- a/w2/d3/SASS/index.html
+++ b/w2/d3/SASS/index.html
@@ -29,7 +29,7 @@
                 alt="non lo so nemmeno io">
             <div>
                 <h6 class="margin-inline-xl">Il sito della DISPERAZIONE.</h6>
-                <p> Scopri anche tu come perdere la tua sanità mentale diventando un Web Developer. ❤️ </p>
+                <p> Scopri anche tu come perdere la tua sanità mentale diventando Web Developer. ❤️ </p>
             </div>
         </div>
 
