--- a/w2/d4/Esercizio/index.html
+++ b/w2/d4/Esercizio/index.html
@@ -67,11 +67,9 @@
             </div>
         </div>
 
-        <div class="profiles d-flex mx-5">
-            <div class="border border-1 rounded-circle p-3 bg-info">
-                <img src="assets/bell.svg" alt="user" class="img-fluid">
-
-            </div class="border border-3 rounded-circle">
+        <div class="profiles d-flex mx-3">
+            <img src="assets/bell.svg" alt="bell logo" width="30">
+            <img src="assets/avatar-3.jpg" class="rounded-circle" width="50" alt="profile">
         </div>
     </nav>
 
@@ -79,7 +77,8 @@
 
         <div class="py-6">
             <h1 class="fw-bold text-light fs-1">Welcome Web Students!</h1>
-            <p class="text-info fs-5 opacity-50">Hand-picked Instructors and expertly crafted courses, designed for the
+            <p class="text-info fs-5 opacity-50">Hand-picked Instructors and expertly crafted <br> courses, designed for
+                the
                 modern
                 students and
                 entrepreneurs.
