--- a/w2/d4/Esercizio/index.html
+++ b/w2/d4/Esercizio/index.html
@@ -67,9 +67,13 @@
             </div>
         </div>
 
-        <div class="profiles d-flex mx-3">
-            <img src="assets/bell.svg" alt="bell logo" width="30">
-            <img src="assets/avatar-3.jpg" class="rounded-circle" width="50" alt="profile">
+        <div class="profiles mx-3 d-flex">
+            <button class="border border-0 bg-info rounded-circle mx-3"><img src="assets/bell.svg" alt="bell logo"
+                    width="30" class="flex-shrink-0 img-fluid"></button>
+            <button class="border border-0 rounded-circle mx-"><img src="assets/avatar-3.jpg" class="rounded-circle"
+                    width="55" alt="profile" class="flex-shrink-0 img-fluid"></button>
+
+
         </div>
     </nav>
 
