--- a/w3/d3/index.html
+++ b/w3/d3/index.html
@@ -12,6 +12,7 @@
     <title>Bookland</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="assets/favicon-32x32.png" alt="icon">
-                <span class="fs-3">Bookland</span>
+                <span class="fs-3">Bookland - lo s(chifo)ito dei libri</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -33,6 +34,10 @@
                     🛒
                 </button>
                 <ul class="dropdown-menu" id="cartList" style="width: 500px;">
+                    <!-- <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li>Cart total:</li> -->
                 </ul>
             </div>
         </div>
